# shortyURL

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
app/api/: crud.py  url.py
app/db/: __init__.py  base.py  database.py  session.py
app/models/: models.py  schemas.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: url.py
backend/app/db/: models.py  schemas.py  session.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 85d519ad9639_.py
backend/app/tests/: conftest.py  test_shortyurl.py  test_url_service.py
backend/scripts/: lock_requirements.sh  migrate.sh
client/: package.json  tailwind.config.js
client/src/: index.js
migrations/: env.py
scripts/: lock_requirements.sh  migrate.sh
