[tool.poetry]
name = "shortyURL"
version = "0.1.0"
description = ""
authors = ["Giang Ta <thoanggiang98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
uvicorn = "^0.11.8"
pylint = "^2.5.3"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
